Fix to skinny articles on mobile.

--- a/src/scss/articles.scss
+++ b/src/scss/articles.scss
@@ -1,3 +1,6 @@
+@import "_colors";
+@import "_utils";
+
 .article__social-icon:hover {
   color: grey;
   cursor: pointer;
@@ -7,6 +10,10 @@
   padding-left: 95px;
   padding-right: 95px;
   padding-top: 50px;
+  @media screen and (max-width: $small-only) {
+    padding-right: 7px;
+    padding-left: 7px;
+  }
 }
 
 .article__category {
